# backend-service

./: .gitignore  pyproject.toml  requirements.txt
aurora_backend/: asgi.py  settings.py  urls.py  wsgi.py
board/: admin.py  exceptions.py  models.py  urls.py
board/migrations/: 0001_initial.py  0002_initial.py  0003_alter_organizationcontact_organization.py  0004_alter_vacancy_status.py  0005_alter_vacancy_status.py
board/serializers/: common.py
board/serializers/organizations/: create.py  list.py  retrieve.py
board/serializers/vacancies/: create.py  list.py  retrieve.py  update.py
board/services/: common.py  organizations.py  vacancies.py
board/tests/: conftest.py  factories.py
board/tests/test_views/: test_organization_delete_api.py  test_organization_retrieve_api.py  test_vacancy_approve_api.py  test_vacancy_create_api.py  test_vacancy_delete_api.py  test_vacancy_reject_api.py  test_vacancy_retrieve_api.py
board/views/: __init__.py
board/views/organizations/: __init__.py  list_create.py  retrieve_update_delete.py
board/views/vacancies/: __init__.py  approve.py  list_create.py  reject.py  (+1 more)
community/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
community/migrations/: 0001_initial.py  0002_alter_communityresourcegroup_name.py
users/: authentication.py  exceptions.py  models.py  urls.py
users/migrations/: 0001_initial.py  0002_alter_user_username.py
users/serializers/: login.py  me.py  register.py
users/services/: auth.py
users/tests/: factories.py
users/views/: login.py  logout.py  me.py  refresh.py  register.py
